[package]
name = "schubfach"
description = "Schubfach algorithm for floating-point to string conversion"
version = "0.0.1"
edition = "2021"
authors = ["Redglyph"]
categories = ["value-formatting"]
keywords = ["float", "ftoa"]
documentation = "https://docs.rs/schufbach"
homepage = "https://github.com/blueglyph/schubfach_rs"
license = "MIT"
repository = "https://github.com/blueglyph/schubfach_rs"
readme = "README.md"

[dependencies]
ilog = "1"

[dev-dependencies]
num = "0.4"
oorandom = "11"
ibig = "0.3"
